--- a/html/auth_pages/change password.html
+++ b/html/auth_pages/change password.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Change Password</title>
+    <link rel="shortcut icon" href="../../img/home_img/Asset 2.png" type="image/x-icon" />
+
     <link rel="stylesheet" href="../../css/change_password.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
