--- a/html/content_page/content.html
+++ b/html/content_page/content.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
     <link rel="stylesheet" href="/css/content.css">
-    <link rel="shortcut icon" href="../img/content_img/logo.jpg" type="image/x-icon" />
+    <link rel="shortcut icon" href="../../img/home_img/Asset 2.png" type="image/x-icon" />
     <link rel="stylesheet" href="../../css/footer.css">
     <link rel="stylesheet" href="/css/home_css/home_pagee.css"/>
     <link rel="stylesheet" href="../../css/home_css/all.min.css"/>
@@ -47,7 +47,8 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#" >
+                              <a href="../auth_pages/register.html" target="_blank">
+
                     <img id="profile_icon" src="../../img/home_img/profile.svg" alt="Shopping Cart">
                   </a>
                 </li>
@@ -289,7 +290,7 @@
         <a href="product.html" role="button">Next</a>
     </div>
 
-<div class="sidecart" id="sidecart">
+    <div class="sidecart" id="sidecart">
       <div class="cart_content">
         <div class="cart_header">
           <img src="images/cart.svg" alt="" style="width: 30px;">
@@ -313,7 +314,7 @@
             <p>SUBTOTAL:</p>
             <p>$ <span id="subtotal_price">3896</span></p>
           </div>
-          <button>Checkout</button>
+          <button><a class="payment-link" href="../payment_page/Payment.html">Checkout</a></button>
           <button>View Cart</button>
           
         </div>
