--- a/html/about_page/about_page.html
+++ b/html/about_page/about_page.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home_page</title>
     <link rel="shortcut icon" href="../../img/home_img/Asset 2.png" type="image/x-icon" />
     <link rel="stylesheet" href="/css/home_css/home_pagee.css"/>
+    <link rel="stylesheet" href="/css/about.css"/>
     <link rel="stylesheet" href="../../css/home_css/all.min.css"/>
     <link rel="stylesheet" href="../../css/slide_cart.css" />
     <link rel="stylesheet" href="../../css/footer.css">
@@ -28,7 +29,7 @@
             <li><a href="../content_page/content.html">products</a></li>
             <li><a href="../service_page/service.html">Services</a></li>
             <li><a href="../contact_us_page/contact_us.html">contact</a></li>
-            <li><a href="../about_page/about_page.html">About</a></li>
+            <li><a href="#">About</a></li>
             <li>
               <a href="#" id="open_cart_btn">
                 <img style="scale: 60%;" src="../../img/home_img/🦆 icon _shopping cart_.png" alt="Shopping Cart">
@@ -45,24 +46,12 @@
     </header>
     <!-- Last Line in Navigator-->
 
+    <div class="book">
+      <iframe allowfullscreen="allowfullscreen" scrolling="no" class="fp-iframe"
+    src="https://heyzine.com/flip-book/1505dca8d4.html" style="border: 0px; width: 100%; height: 600px;"></iframe>
+    </div>
 
     <!-- Content Section of Home Page -->
-    <div class="top-img">
-      <section class="content">
-        <p class="lifestyle">Trade-in-offer</p>
-        <p class="sup">Super Value deals</p>
-        <p class="sale">On all products</p>
-        <p class="free-shipping">
-          save more with coupons &<span>up to 70% off!</span>
-        </p>  
-        <button class="btn">
-          <a id="transform-btn" href="../content_page/content.html">
-          Shop Now  
-          <img  class="imgs" src="../../img/home_img/Ecommerce campaign-cuate 1.png"  alt="photo">
-          </a>
-        </button>
-      </section>
-    </div>
     <!-- Last Line in Content Section -->
 
     <!-- Slide Cart -->
