--- a/html/contact_us_page/contact_us.html
+++ b/html/contact_us_page/contact_us.html
@@ -17,32 +17,37 @@
 </head>
 
 <body>
-  <nav>
-    <div class="navbar-container">
-      <div class="navbar-logo">
-        <img src="../../img/home_img/Asset 2.png" alt="logo">
-      </div>
-      <ul class="navbar-links"> 
-        <li><input class="search" type="search" placeholder=" search..."/></li>
-        <li><a href="../home_page/home_page.html">Home</a></li>
-        <li><a href="../content_page/content.html">products</a></li>
-        <li><a href="../service_page/service.html">Services</a></li>
-        <li><a href="../contact_us_page/contact_us.html">contact</a></li>
-        <li><a href="#">About</a></li>
-        <li>
-          <a href="#" id="open_cart_btn">
-            <img style="scale: 60%;" src="../../img/home_img/🦆 icon _shopping cart_.png" alt="Shopping Cart">
-          </a>
-        </li>
-        <li>
-                      <a href="../auth_pages/register.html" target="_blank">
-
-            <img id="profile_icon" src="../../img/home_img/profile.svg" alt="Shopping Cart">
-          </a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+      <!-- Navigator Section -->
+      <header>
+        <nav>
+          <div class="navbar-container">
+            <div class="navbar-logo">
+              <img src="../../img/home_img/Asset 2.png" alt="logo">
+            </div>
+            <!-- Navigator Links -->
+            <ul class="navbar-links"> 
+              <li><input class="search" type="search" placeholder=" search..."/></li>
+              <li><a href="../home_page/home_page.html">Home</a></li>
+              <li><a href="../content_page/content.html">products</a></li>
+              <li><a href="../service_page/service.html">Services</a></li>
+              <li><a href="../contact_us_page/contact_us.html">contact</a></li>
+              <li><a href="#">About</a></li>
+              <li>
+                <a href="#" id="open_cart_btn">
+                  <img style="scale: 60%;" src="../../img/home_img/🦆 icon _shopping cart_.png" alt="Shopping Cart">
+                </a>
+              </li>
+              <li>
+                <a href="../auth_pages/register.html" target="_blank">
+                  <img id="profile_icon" src="../../img/home_img/profile.svg" alt="Shopping Cart">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+      <!-- Last Line in Navigator-->
+  
     <div class="contact-container">
         <div class="contact-form">
             <div class="contact-header">
