--- a/html/content_page/product3.html
+++ b/html/content_page/product3.html
@@ -33,7 +33,7 @@
             <li><a href="../content_page/content.html">products</a></li>
             <li><a href="../service_page/service.html">Services</a></li>
             <li><a href="../contact_us_page/contact_us.html">contact</a></li>
-            <li><a href="#">About</a></li>
+              <li><a href="../about_page/about_page.html">About</a></li>
             <li>
               <a href="#" id="open_cart_btn">
                 <img style="scale: 60%;" src="../../img/home_img/🦆 icon _shopping cart_.png" alt="Shopping Cart">
