--- a/html/service_page/service.html
+++ b/html/service_page/service.html
@@ -31,7 +31,7 @@
               <li><a href="../content_page/content.html">products</a></li>
               <li><a href="../service_page/service.html">Services</a></li>
               <li><a href="../contact_us_page/contact_us.html">contact</a></li>
-              <li><a href="#">About</a></li>
+              <li><a href="../about_page/about_page.html">About</a></li>
               <li>
                 <a href="#" id="open_cart_btn">
                   <img style="scale: 60%;" src="../../img/home_img/🦆 icon _shopping cart_.png" alt="Shopping Cart">
@@ -91,62 +91,33 @@
         </div>
     </section>
 
-    <div class="sidecart" id="sidecart">
-    <div class="cart_content">
-      <div class="cart_header">
-        <img src="images/cart.svg" alt="" style="width: 30px;">
-        <div class="header_title">
-          <h2>Your Cart</h2>
-          <span id="Items_num">4</span>
-        </div>
-        <span id="close_btn" class="close_btn">&times;</span>
-      </div>
-      <!-- Cart Items -->
-      <div class="cart_items">
-        <!-- <div class="cart_item">
-            <div class="remove_item">
-              <span>&times;</span>
+        <!-- Slide Cart -->
+        <div class="sidecart" id="sidecart">
+          <div class="cart_content">
+            <!-- Cart Header -->
+            <div class="cart_header">
+              <img src="images/cart.svg" alt="" style="width: 30px;">
+              <div class="header_title">
+                <h2>Your Cart</h2>
+                <span id="Items_num">0</span>
+              </div>
+              <span id="close_btn" class="close_btn">&times;</span>
             </div>
-          </div> -->
-      </div>
-      <!-- Cart Actions -->
-      <div class="cart_actions">
-        <div class="subtotal">
-          <p>SUBTOTAL:</p>  <!-- Slide Cart -->
-          <div class="sidecart" id="sidecart">
-            <div class="cart_content">
-              <!-- Cart Header -->
-              <div class="cart_header">
-                <img src="images/cart.svg" alt="" style="width: 30px;">
-                <div class="header_title">
-                  <h2>Your Cart</h2>
-                  <span id="Items_num">0</span>
-                </div>
-                <span id="close_btn" class="close_btn">&times;</span>
+            <!-- Cart Items -->
+            <div class="cart_items">
+              <!-- No Items Add it -->
+            </div>
+            <!-- Cart Actions -->
+            <div class="cart_actions">
+              <div class="subtotal">
+                <p>SUBTOTAL:</p>
+                <p>$ <span id="subtotal_price">0</span></p>
               </div>
-              <!-- Cart Items -->
-              <div class="cart_items">
-                <!-- No Items Add it -->
-              </div>
-              <!-- Cart Actions -->
-              <div class="cart_actions">
-                <div class="subtotal">
-                  <p>SUBTOTAL:</p>
-                  <p>$ <span id="subtotal_price">0</span></p>
-                </div>
-                <button><a class="payment-link" href="../payment_page/Payment.html">Checkout</a></button>
-                <button>View Cart</button>
-              </div>
+              <button><a class="payment-link" href="../payment_page/Payment.html">Checkout</a></button>
+              <button>View Cart</button>
             </div>
           </div>
-          <p>$ <span id="subtotal_price">3896</span></p>
         </div>
-        <button><a class="payment-link" href="../payment_page/Payment.html">Checkout</a></button>
-        <button>View Cart</button>
-
-      </div>
-    </div>
-  </div>
 
 <!-- Footer Section -->
 <footer class="footer">
