--- a/html/content_page/product3.html
+++ b/html/content_page/product3.html
@@ -2,20 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products</title>
-    <link rel="stylesheet" href="/css/content.css">
-    <link rel="shortcut icon" href="../../img/home_img/Asset 2.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../../css/footer.css">
-    <link rel="stylesheet" href="/css/home_css/home_pagee.css"/>
-    <link rel="stylesheet" href="../../css/slide_cart.css" />
-    <link rel="stylesheet" href="../../css/home_css/all.min.css"/>
-    <link rel="stylesheet" type="text/css"
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Products</title>
+  <link rel="shortcut icon" href="../../img/home_img/Asset 2.png" type="image/x-icon" />
+  <link rel="stylesheet" href="../../css/home_css/home_pagee.css">
+  <link rel="stylesheet" href="../../css/footer.css">
+  <link rel="stylesheet" href="../../css/slide_cart.css">
+  <link rel="stylesheet" href="../../css/content.css">
+  <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <script src="../../js/slide_cart.js" defer></script>
-
-
+  <link rel="stylesheet" type="text/css"  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+  <script src="../../js/slide_cart.js" defer></script>
 </head>
 
 <body>
