--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>Home_page</title>
-    <link rel="shortcut icon" href="../../img/home_img/Asset 2.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../../css/home_css/home_pagee.css">
-    <link rel="stylesheet" href="../../css/footer.css">
-    <link rel="stylesheet" href="../../css/slide_cart.css">
+    <link rel="shortcut icon" href="img/home_img/Asset 2.png" type="image/x-icon" />
+    <link rel="stylesheet" href="css/home_css/home_pagee.css">
+    <link rel="stylesheet" href="css/footer.css">
+    <link rel="stylesheet" href="css/slide_cart.css">
 
     <link rel="stylesheet" type="text/css"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <script src="../../js/slide_cart.js" defer></script>
+    <script src="js/slide_cart.js" defer></script>
   </head>
 
   <body>
@@ -19,24 +19,24 @@
       <nav>
         <div class="navbar-container">
           <div class="navbar-logo">
-            <img src="../../img/home_img/Asset 2.png" alt="logo">
+            <img src="img/home_img/Asset 2.png" alt="logo">
           </div>
           <!-- Navigator Links -->
           <ul class="navbar-links"> 
             <li><input class="search" type="search" placeholder=" search..."/></li>
-            <li><a href="../home_page/home_page.html">Home</a></li>
-            <li><a href="../content_page/content.html">products</a></li>
-            <li><a href="../service_page/service.html">Services</a></li>
-            <li><a href="../contact_us_page/contact_us.html">contact</a></li>
-            <li><a href="../about_page/about_page.html">About</a></li>
+            <li><a href="html/home_page/home_page.html">Home</a></li>
+            <li><a href="html/content_page/content.html">products</a></li>
+            <li><a href="html/service_page/service.html">Services</a></li>
+            <li><a href="html/contact_us_page/contact_us.html">contact</a></li>
+            <li><a href="html/about_page/about_page.html">About</a></li>
             <li>
               <a href="#" id="open_cart_btn">
-                <img style="scale: 60%;" src="../../img/home_img/🦆 icon _shopping cart_.png" alt="Shopping Cart">
+                <img style="scale: 60%;" src="img/home_img/🦆 icon _shopping cart_.png" alt="Shopping Cart">
               </a>
             </li>
             <li>
-              <a href="../auth_pages/register.html" target="_blank">
-                <img id="profile_icon" src="../../img/home_img/profile.svg" alt="Shopping Cart">
+              <a href="html/auth_pages/register.html" target="_blank">
+                <img id="profile_icon" src="img/home_img/profile.svg" alt="Shopping Cart">
               </a>
             </li>
           </ul>
@@ -56,9 +56,9 @@
           save more with coupons &<span>up to 70% off!</span>
         </p>  
         <button class="btn">
-          <a id="transform-btn" href="../content_page/content.html">
+          <a id="transform-btn" href="html/content_page/content.html">
           Shop Now  
-          <img  class="imgs" src="../../img/home_img/Ecommerce campaign-cuate 1.png"  alt="photo">
+          <img  class="imgs" src="img/home_img/Ecommerce campaign-cuate 1.png"  alt="photo">
           </a>
         </button>
       </section>
@@ -87,7 +87,7 @@
             <p>SUBTOTAL:</p>
             <p>$ <span id="subtotal_price">0</span></p>
           </div>
-          <button><a class="payment-link" href="../payment_page/Payment.html">Checkout</a></button>
+          <button><a class="payment-link" href="html/payment_page/Payment.html">Checkout</a></button>
           <button>View Cart</button>
         </div>
       </div>
